# Stormwater-Management-Model

./: README.md
.github/workflows/: build-and-deploy.yml  build-and-regression-test.yml  build-and-unit-test.yml
ci/: conftest.py  test_compare_outputs.py
python/: CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
python/epaswmm/: CMakeLists.txt  __init__.py  _epaswmm.pyx  epaswmm.pxd  epaswmm.pyi  epaswmm.pyx
python/epaswmm/output/: CMakeLists.txt  __init__.py  _output.pyi  _output.pyx  output.pxd  output.pyi  output.pyx
python/epaswmm/solver/: CMakeLists.txt  __init__.py  _solver.pyi  _solver.pyx  solver.pxd  solver.pyi  solver.pyx
python/epaswmm/tests/: test_epaswmm_helpers.py  test_swmm_solver.py  test_swwm_output.py
python/epaswmm/tests/data/solver/: non_existent_input_file.rpt  site_drainage_example.ini  site_drainage_example.inp  site_drainage_example.out  site_drainage_example.rpt
python/tests/: __init__.py  test_epaswmm_helpers.py  test_swmm_solver.py  test_swwm_output.py
python/tests/data/output/: json_time_series.pickle
python/tests/data/solver/: non_existent_input_file.inp  site_drainage_example.inp
src/outfile/: errormanager.c  errormanager.h  messages.h  swmm_output.c
src/outfile/include/: swmm_output.h  swmm_output_enums.h
src/run/: CMakeLists.txt
src/solver/: consts.h  dynwave.c  error.txt  lid.c  objects.h  project.c  qualrout.c  routing.c  subcatch.c  surfqual.c  swmm5.c
src/solver/include/: swmm5.h
tests/solver/: CMakeLists.txt  test_solver_errors.cpp  test_solver_hotstart.cpp
